# SFML_2D_BLUEPRINT

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
data/Profiles/: default.json  default.profile
data/Settings/: Settings.mkf
data/StyleSheets/: BlackYellow.mkss
src/GUI/: GUI.cpp  GUI.h  GuiManager.cpp  GuiManager.h
src/GUI/Widgets/: Button.cpp  Button.h  ExtensiveMenu.cpp  ExtensiveMenu.h  Menu.cpp  Menu.h  SimpleText.cpp  SimpleText.h  Slider.cpp  Slider.h  SmipleChoosingMenu.cpp  SmipleChoosingMenu.h  TexturedButtonWithOptionalText.cpp  TexturedButtonWithOptionalText.h  ToggleButton.cpp  ToggleButton.h  WidgetBase.h  gui_Enums.h  progressBar.cpp  progressBar.h
src/Rendering/: Renderer.h
src/Statemachine/: EssentialWindow.h  Gamestate.cpp  Gamestate.h  StateEnum.h  StateMachine.cpp  StateMachine.h
src/States/: ChooseMap.cpp  ChooseMap.h  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  Settings.cpp  Settings.h  States.cpp  States.h
src/Util/: Serialization.cpp  Serialization.h  TextureHandler.cpp  TextureHandler.h
src/World/: ID-Enum.h  Tile-Enum.h  Worldgenerator.cpp  Worldgenerator.h  simple.cpp  simple.h
