cmake_minimum_required(VERSION 3.14)
set(PROJECT_NAME "CAESAR-2D")
project(${PROJECT_NAME})
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_DIR "${CMAKE_CURRENT_LIST_DIR}/libs/SFML-2.5.1/lib/cmake/SFML")
file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.hpp") #glob all the source files intp one place
file(COPY libs/SFML-2.5.1/bin/openal32.dll DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
set(CMAKE_CXX_STANDARD 17)
link_libraries(stdc++fs) #link the filesystem
file(GLOB_RECURSE SCRF "src/*.cpp" "src/*.hpp")
include_directories("libs/")
include_directories("libs/FastNoise")
include_directories("src/Statemachine")
include_directories("src/GUI")
include_directories("src/Util")
add_executable(${PROJECT_NAME} ${SCRF} main.cpp libs/FastNoise/FastNoise.h libs/FastNoise/FastNoise.cpp)
find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED)
target_link_libraries(${PROJECT_NAME} sfml-audio sfml-graphics sfml-window sfml-system)